# Sysprog

./: CMakeLists.txt
laba1/task1/: logins.txt  task1.c
laba1/task2/: task2.c
laba1/task7/: task7.c
