cmake_minimum_required(VERSION 3.22.1)
project(SystemProg C)

set(CMAKE_C_STANDARD 23)

add_executable(task1 laba1/task1/task1.c)

add_executable(task2 laba1/task2/task2.c)

add_executable(task3 laba1/task3/task3.c)

add_executable(task4 laba1/task4/task4.c)

add_executable(task5 laba1/task5/task5.c)

add_executable(task6 laba1/task6/task6.c)

add_executable(task7 laba1/task7/task7.c)
